# book

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.specify/memory/: constitution.md
backend/: evaluation_metrics.py  retrieval_test.py  test_queries.json
backend/results/: retrieval_report.json
book-frontend/: docusaurus.config.js  package-lock.json  sidebars.js
book-frontend/docs/: glossary.md
book-frontend/docs/001-ros2-course-module/: 01-introduction-to-ros2.md  02-nodes-topics-services.md  03-python-agents-with-rclpy.md  04-humanoid-urdf-basics.md  _category_.json  intro.md
book-frontend/docs/002-digital-twin-simulation/: _category_.json  digital-twins-overview.md  (+4 more)
docs/002-digital-twin-simulation/: 01-digital-twins-overview.md  02-physics-simulation-gazebo.md  03-virtual-environments-unity.md  04-sensor-simulation.md
docs/003-nvidia-isaac-ai-robot/: 01-nvidia-isaac-overview.md  02-isaac-sim-synthetic-data.md  03-isaac-ros-vslam.md  04-nav2-humanoid-navigation.md
docs/module-4/: 01-vla-overview.md  02-voice-to-action.md  03-llm-cognitive-planning.md  04-capstone-autonomous-humanoid.md
specs/001-rag-retrieval-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-course-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nvidia-isaac-ai-robot/: spec.md  tasks.md
specs/003-rag-embeddings/: plan.md  spec.md  tasks.md
specs/004-vision-language-action-vla/: plan.md  spec.md  tasks.md
tests/: test_main.py  test_retrieval.py  verify_setup.py
(+50 files in other folders)
